Stopgap fix for when there are no upcoming events

--- a/ndbcvi-website/app/globals.css
+++ b/ndbcvi-website/app/globals.css
@@ -11,10 +11,6 @@ p {
   font-family: var(--font-dm-sans);
 }
 
-.heading-text {
-  font-family: "Inter", sans-serif;
-}
-
 .card__container {
   width: 100%;
   height: 500px;
